--- a/src/main/resources/ucf/assignments/MainWindow.fxml
+++ b/src/main/resources/ucf/assignments/MainWindow.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -23,11 +26,6 @@
               <MenuItem mnemonicParsing="false" text="Quit" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Find">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Search" />
-            </items>
-          </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
               <MenuItem mnemonicParsing="false" text="About" />
@@ -36,25 +34,47 @@
         </menus>
       </MenuBar>
    </top>
-   <center>
-      <TableView fx:id="itemsTableView" editable="true" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn fx:id="itemsSerialNumberColumn" onEditCommit="#editSerialNumberText" prefWidth="75.0" text="Serial Number" />
-          <TableColumn fx:id="itemsNameColumn" onEditCommit="#editNameText" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="itemsValueColumn" onEditCommit="#editValueText" prefWidth="75.0" text="Value" />
-        </columns>
-      </TableView>
-   </center>
    <bottom>
       <VBox BorderPane.alignment="CENTER">
          <children>
-            <HBox>
+            <HBox spacing="5.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#addNewItemButtonClicked" text="Add New Item" />
-                  <Button fx:id="deleteSelItemButton" mnemonicParsing="false" onAction="#deleteSelectedItemButtonClicked" text="Delete Selected Item" />
+                  <Button mnemonicParsing="false" onAction="#deleteSelectedItemButtonClicked" text="Delete Selected Item" />
                </children>
+               <opaqueInsets>
+                  <Insets left="10.0" right="10.0" />
+               </opaqueInsets>
             </HBox>
          </children>
+         <padding>
+            <Insets bottom="5.0" left="10.0" top="5.0" />
+         </padding>
       </VBox>
    </bottom>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <ChoiceBox fx:id="choiceBox" prefWidth="150.0" />
+                  <TextField fx:id="searchQueryField" onKeyReleased="#queryFieldChanged" promptText="Search Query" />
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+               </VBox.margin>
+            </HBox>
+            <TableView fx:id="itemsTableView" editable="true">
+              <columns>
+                  <TableColumn fx:id="itemsValueColumn" onEditCommit="#editValueText" prefWidth="100.0" text="Value" />
+                <TableColumn fx:id="itemsSerialNumberColumn" onEditCommit="#editSerialNumberText" prefWidth="150.0" text="Serial Number" />
+                <TableColumn fx:id="itemsNameColumn" onEditCommit="#editNameText" prefWidth="150.0" text="Name" />
+              </columns>
+            </TableView>
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
